# lean_cpp

./: .gitmodules  README.md
.github/workflows/: cmake.yml  codeql.yml
LibrariesSandbox/chrono/: CMakeLists.txt  chrono.cpp
LibrariesSandbox/fmt/: CMakeLists.txt  fmt.cpp
ModernCppChallenge/: CMakeLists.txt  README.md  problem1.cpp  problem15.cpp  problem16.cpp  problem17.cpp  problem18.cpp  problem19.cpp  problem2.cpp  problem21.cpp  problem22.cpp  problem23.cpp  problem24.cpp  problem25.cpp  problem26.cpp  problem27.cpp  problem28.cpp  problem29.cpp  problem3.cpp  problem30.cpp  problem31.cpp  problem32.cpp  problem33.cpp  problem34.cpp  problem35.cpp  problem36.cpp  problem37.cpp  problem38.cpp  problem39.cpp  problem40.cpp  problem41.cpp  problem42.cpp  problem43.cpp  problem45.cpp  problem46.cpp  problem51.cpp  problem57.cpp  problem58.cpp  problem61.cpp  problem62.cpp  (+21 more)
ModernCppChallenge/problem43/: CMakeLists.txt  problem43_fmt.cpp
ModernCppChallenge/problem47/: CMakeLists.txt
ModernCppChallenge/problem47_double_buffer/: problem47_doubleBuffer.cpp
ModernCppChallenge/problem48_recurring_elements/: CMakeLists.txt  problem48_recurring_elements.cpp
ModernCppChallenge/problem49_text_histogram/: CMakeLists.txt  problem49_text_histogram.cpp
ModernCppChallenge/problem4_max_prime_number/: CMakeLists.txt  problem4_max_prime_number.cpp
ModernCppChallenge/problem50_filtering_phone_number/: CMakeLists.txt  problem50_filtering_phone_number.cpp
ModernCppChallenge/problem52/: problem52.cpp
ModernCppChallenge/problem52_string_permutation/: CMakeLists.txt  problem52.cpp
ModernCppChallenge/problem53_average_evaluation/: CMakeLists.txt  problem53_average_evaluation.cpp
ModernCppChallenge/problem54_make_pair/: CMakeLists.txt  problem54_make_pair.cpp
ModernCppChallenge/problem55_zip_algorithm/: CMakeLists.txt  problem55_zip_algorithm.cpp
ModernCppChallenge/problem56_selection_algorithm/: CMakeLists.txt  problem56_selection_algorithm.cpp
ModernCppChallenge/problem58/: CMakeLists.txt  problem58.cpp
ModernCppChallenge/problem59_itachi/: CMakeLists.txt  problem59.cpp
ModernCppChallenge/problem5_sexy_prime_number/: CMakeLists.txt  problem5_sexy_prime_number.cpp
ModernCppChallenge/problem60_lifegame/: CMakeLists.txt  problem60.cpp
ModernCppChallenge/problem6_excess_number/: CMakeLists.txt  problem6_excess_number.cpp
ModernCppChallenge/problem72/: CMakeLists.txt  problem72.cpp
ModernCppChallenge/problem72_strategy_pattern/: problem72.cpp
ModernCppChallenge/problem77_movieTitleTopdf/: CMakeLists.txt  problem77.cpp
ModernCppChallenge/problem78_imagesToPdf/: CMakeLists.txt  problem78.cpp
ModernCppChallenge/problem79_zipfile/: CMakeLists.txt  README.md  problem79.cpp
ModernCppChallenge/problem80_zipfile_compless/: CMakeLists.txt  problem80.cpp
ModernCppChallenge/problem81_password_zip/: problem81.cpp
ModernCppChallenge/problem82_make_png/: CMakeLists.txt  problem82.cpp
ModernCppChallenge/problem83_cert_png/: CMakeLists.txt  problem83.cpp
MultiThreadDesignPattern/: Balking.cpp  CMakeLists.txt  GuardedSuspension.cpp  Immutable.cpp  README.md  SingleThreadExecution.cpp
ToolTips/: README.md
filesystem/: README.md  filesystem_pick_extension.cpp
threadClass/: CMakeLists.txt
